# local-model-runtime-evaluation-harness

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  matrix.md  overhead.md  package-2-omlx-thinking-d2.md  package-2-omlx-thinking-d3.md  package-2-omlx-thinking-d4.md  package-2-omlx-thinking-gate-b.md  package-2-omlx-thinking-gate-d.md  personal-selection-phase-a-coordinator-prompt.md  personal-selection-phase-a.md  personal-selection-temporary-closeout-2026-07-16.md  plugin-0.2.0-review.md  plugin-0.3.0-review.md  preference.md  rag.md  stage-0.md  stage-1.md  stage-2-gate-a.md  stage-2-harness-unattended-gate-a.md  stage-2b1-gate-a.md  stage-2b1-operator-prep.md  stage-2b2-coordinator-prompt.md  stage-2b2-gate-a.md  stage-2b2-operator-prep.md
legacy/: README.md  benchmark_local_endpoints_v1.py
manifests/: stage-0-dry-run-002.json  stage-0-dry-run.json  stage-1-route-overhead-001.json  stage-1-route-overhead-002.json  stage-1-route-overhead.json.template  stage-2-optiq-042-operator-benchmark-007.json  stage-2-optiq-042-operator-smoke-004.json  stage-2-optiq-042-operator-smoke-005.json  stage-2-optiq-042-operator-smoke-006.json  stage-2-optiq-harness-benchmark-008.json  stage-2-optiq-harness-benchmark-20260724-002.json  stage-2-optiq-harness-route-001.json  stage-2-optiq-harness-route-002.json  stage-2-optiq-harness-route-003.json  stage-2-optiq-harness-route-20260724-001.json  stage-2-optiq-inference-001.json  stage-2-optiq-inference-002.json  stage-2-optiq-inference-003.json  stage-2-optiq-inference-004.json  (+10 more)
suites/: gemma-matrix-v1.json  (+16 more)
(+380 files in other folders)
